# CompressRush

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/algorithms/: huffman.cpp  huffman.hpp
